--- a/sidx/platform/msvc2008/projects/sidx.vcproj
+++ b/sidx/platform/msvc2008/projects/sidx.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="libsidx"
+	Name="0.sidx"
 	ProjectGUID="{EE2229A3-AD5F-46E7-AFAB-729F8AA18036}"
 	RootNamespace="sidx"
 	Keyword="Win32Proj"
