--- a/rapidvg/platform/msvc2008/projects/rapidvg.vcproj
+++ b/rapidvg/platform/msvc2008/projects/rapidvg.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="rapidvg"
+	Name="0.rapidvg"
 	ProjectGUID="{EE2229A3-AD5F-46E7-AFAB-729F8AA18036}"
 	RootNamespace="rapidvg"
 	Keyword="Win32Proj"
@@ -175,14 +175,6 @@
 		</File>
 		<File
 			RelativePath="..\..\..\src\rapidvg\rvg_shader.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\rapidvg\rvg_shader2.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\rapidvg\rvg_shader2.h"
 			>
 		</File>
 		<File
