--- a/rapidvg/platform/msvc2008/projects/rapidvg.vcproj
+++ b/rapidvg/platform/msvc2008/projects/rapidvg.vcproj
@@ -154,11 +154,27 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\rapidvg\rvg_matrix.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\rapidvg\rvg_matrix.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\rapidvg\rvg_render.c"
 			>
 		</File>
 		<File
 			RelativePath="..\..\..\src\rapidvg\rvg_render.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\rapidvg\rvg_shader.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\rapidvg\rvg_shader.h"
 			>
 		</File>
 	</Files>
