--- a/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
+++ b/ejoy2d/platform/msvc2008/projects/ejoy2d.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="ejoy2d"
+	Name="0.ejoy2d"
 	ProjectGUID="{2B614163-E3A3-4BCD-9933-EF59B8467868}"
 	RootNamespace="ejoy2d"
 	Keyword="Win32Proj"
