--- a/rapidvg/platform/msvc2008/projects/rapidvg.vcproj
+++ b/rapidvg/platform/msvc2008/projects/rapidvg.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="0.rapidvg"
+	Name="1.rapidvg"
 	ProjectGUID="{EE2229A3-AD5F-46E7-AFAB-729F8AA18036}"
 	RootNamespace="rapidvg"
 	Keyword="Win32Proj"
@@ -145,6 +145,14 @@
 	<References>
 	</References>
 	<Files>
+		<File
+			RelativePath="..\..\..\src\rapidvg\normal_shader.frag"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\rapidvg\normal_shader.vert"
+			>
+		</File>
 		<File
 			RelativePath="..\..\..\src\rapidvg\rvg.h"
 			>
