[ADDED] glue sample
Former-commit-id: 1c14e6065301ad00e19d611c75ca5a55b49a5015

--- a/easycomplex/platform/msvc2008/projects/easycomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/easycomplex.vcproj
@@ -66,7 +66,7 @@
 				AdditionalDependencies="wxmsw30ud_gl.lib wxmsw30ud_propgrid.lib wxmsw30ud_adv.lib wxmsw30ud_stc.lib wxmsw30ud_core.lib wxbase30ud.lib wxscintillad.lib wxtiffd.lib wxjpegd.lib wxpngd.lib wxzlibd.lib comctl32.lib rpcrt4.lib glew32s.lib jsond.lib freetype250_D.lib luad.lib libpngd.lib cjsond.lib lzmad.lib pthreadVC2.lib assimpd.lib"
 				OutputFile="..\easycomplex\x86\Debug\easycomplex.exe"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="..\..\..\..\editor-external\wx\lib;..\..\..\..\editor-external\gl\lib;..\..\..\..\editor-external\json\lib;..\..\..\..\editor-external\soil\lib;..\..\..\..\editor-external\freetype\lib;..\..\..\..\editor-external\libpng\lib;..\..\..\..\editor-external\intel;..\..\..\..\editor-external\cjson\lib;..\..\..\..\editor-external\lzma\lib;..\..\..\..\editor-external\pthread\lib\x86;..\..\..\..\editor-external\lua\lib;..\..\..\..\easy3d\external\assimp\lib"
+				AdditionalLibraryDirectories="&quot;..\..\..\..\editor-external\wx\lib&quot;;&quot;..\..\..\..\editor-external\gl\lib&quot;;&quot;..\..\..\..\editor-external\json\lib&quot;;&quot;..\..\..\..\editor-external\soil\lib&quot;;&quot;..\..\..\..\editor-external\freetype\lib&quot;;&quot;..\..\..\..\editor-external\libpng\lib&quot;;&quot;..\..\..\..\editor-external\intel&quot;;&quot;..\..\..\..\editor-external\cjson\lib&quot;;&quot;..\..\..\..\editor-external\lzma\lib&quot;;&quot;..\..\..\..\editor-external\pthread\lib\x86&quot;;&quot;..\..\..\..\editor-external\lua\lib&quot;;..\..\..\..\easy3d\external\assimp\lib"
 				IgnoreDefaultLibraryNames="LIBC.LIB"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="..\easycomplex\x86\Debug\easycomplex.pdb"
