--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -357,6 +357,14 @@
 						>
 					</File>
 					<File
+						RelativePath="..\..\..\src\easydb_cl\PackEPT.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\PackEPT.h"
+						>
+					</File>
+					<File
 						RelativePath="..\..\..\src\easydb_cl\PackLuaDescFile.cpp"
 						>
 					</File>
