[ADDED] refactor glue::ShaderMgr, add sl's vertices assembly
Former-commit-id: 4cf2e090f0628549ce714c7063ac17bcd7bb381e

--- a/glue/platform/msvc2008/projects/glue.vcproj
+++ b/glue/platform/msvc2008/projects/glue.vcproj
@@ -163,9 +163,25 @@
 				RelativePath="..\..\..\src\render\RenderContext.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\render\ShaderMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\render\ShaderMgr.h"
+				>
+			</File>
 			<Filter
 				Name="shader"
 				>
+				<File
+					RelativePath="..\..\..\src\render\ShapeShader.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\render\ShapeShader.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\..\src\render\SpriteShader.cpp"
 					>
