[FIXED] recent file menu
Former-commit-id: 63604f513b69c8e8c5ebcede11f22d1e00b4c2b7

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2497,6 +2497,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\view\RecentFilesMenu.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\view\RecentFilesMenu.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\view\SettingsDialog.cpp"
 					>
 				</File>
