[ADDED] group & break up
Former-commit-id: a560df1aaba44338954f904ce8a0428b56599fb6

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -573,6 +573,18 @@
 					</File>
 				</Filter>
 			</Filter>
+			<Filter
+				Name="group"
+				>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\GroupHelper.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\GroupHelper.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="preview"
