[ADDED] expand lr group
Former-commit-id: 9a9a41b3ab7819e54dadaa008e22b2a4c4c34ec1

--- a/easydb/platform/msvc2008/projects/easydb_cl.vcproj
+++ b/easydb/platform/msvc2008/projects/easydb_cl.vcproj
@@ -793,11 +793,19 @@
 					Name="base"
 					>
 					<File
-						RelativePath="..\..\..\src\easydb_cl\LRExpansion.cpp"
+						RelativePath="..\..\..\src\easydb_cl\LRExpandGroup.cpp"
 						>
 					</File>
 					<File
-						RelativePath="..\..\..\src\easydb_cl\LRExpansion.h"
+						RelativePath="..\..\..\src\easydb_cl\LRExpandGroup.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\LRExpandInherit.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\easydb_cl\LRExpandInherit.h"
 						>
 					</File>
 					<File
