--- a/template/platform/msvc2008/projects/easytemplate.vcproj
+++ b/template/platform/msvc2008/projects/easytemplate.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="easytemplate"
+	Name="6.easytemplate"
 	ProjectGUID="{E487FD3F-ABE4-43FB-8A59-03768C700CFD}"
 	RootNamespace="easytemplate"
 	Keyword="Win32Proj"
