--- a/easyscale9/platform/msvc2008/projects/libscale9.vcproj
+++ b/easyscale9/platform/msvc2008/projects/libscale9.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="libscale9"
+	Name="5.libscale9"
 	ProjectGUID="{E5B2631F-C25D-4253-A9CB-A57EF357B004}"
 	RootNamespace="libscale9"
 	Keyword="Win32Proj"
