--- a/easytexture/platform/msvc2008/projects/libtexture.vcproj
+++ b/easytexture/platform/msvc2008/projects/libtexture.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="libtexture"
+	Name="5.libtexture"
 	ProjectGUID="{4937E011-9C27-4E8E-87F8-1924F41E0649}"
 	RootNamespace="libtexture"
 	Keyword="Win32Proj"
