rm include spritepack.h
Former-commit-id: a523c580e2da15261e874f3ca49fb3e7cde18b16

--- a/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
+++ b/easyrespacker/platform/msvc2008/projects/librespacker.vcproj
@@ -592,6 +592,10 @@
 				Name="04.anchor"
 				>
 				<File
+					RelativePath="..\..\..\src\librespacker\PackAnchor.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\librespacker\PackAnchor.h"
 					>
 				</File>
