[FIXED] edit mesh in eanim
Former-commit-id: 0fb53a3b52d6184f9ba2fa8b2630f8f5b42caab3

--- a/easyanim/platform/msvc2008/projects/easyanimation.vcproj
+++ b/easyanim/platform/msvc2008/projects/easyanimation.vcproj
@@ -631,6 +631,14 @@
 					RelativePath="..\..\..\src\easyanimation\edit\KeyDownHandler.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\edit\OpenSymbolDialog.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyanimation\edit\OpenSymbolDialog.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
