[ADDED] change complex center in eui
Former-commit-id: 92ab5c707e284316b29e30dd5211e12ae6998edf

--- a/easyui/platform/msvc2008/projects/easyui.vcproj
+++ b/easyui/platform/msvc2008/projects/easyui.vcproj
@@ -492,6 +492,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\easyui\window\MoveSpriteCenterState.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\easyui\window\MoveSpriteCenterState.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\easyui\window\TranslateSpriteState.cpp"
 					>
 					<FileConfiguration
