[ADDED] draw sprite
Former-commit-id: 6d5af4f67e23ba9caf0d51e10eb1c3fb2ded6da5

--- a/easyeditor/platform/msvc2008/projects/librender.vcproj
+++ b/easyeditor/platform/msvc2008/projects/librender.vcproj
@@ -170,6 +170,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\source\render\EE_ShaderLab.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\EE_ShaderLab.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\source\render\EE_SIdx.cpp"
 				>
 			</File>
