--- a/easyeditor/platform/msvc2008/projects/libtool.vcproj
+++ b/easyeditor/platform/msvc2008/projects/libtool.vcproj
@@ -222,6 +222,14 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="macro"
+			>
+			<File
+				RelativePath="..\..\..\include\ee\singleton.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\source\tool\Exception.cpp"
 			>
