[FIXED] primitive draw
Former-commit-id: 8678d40fda7badb126d746234b786b1f27e8d6a1

--- a/easyeditor/platform/msvc2008/projects/librender.vcproj
+++ b/easyeditor/platform/msvc2008/projects/librender.vcproj
@@ -170,6 +170,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\source\render\EE_RVG.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\include\ee\EE_RVG.h"
 				>
 			</File>
@@ -431,22 +435,6 @@
 			</File>
 			<File
 				RelativePath="..\..\..\include\ee\DrawShapesVisitor.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\source\render\PrimitiveDraw.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\include\ee\PrimitiveDraw.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\source\render\PrimitiveDrawNew.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\include\ee\PrimitiveDrawNew.h"
 				>
 			</File>
 			<File
