--- a/easyeditor/platform/msvc2008/projects/librender.vcproj
+++ b/easyeditor/platform/msvc2008/projects/librender.vcproj
@@ -205,14 +205,6 @@
 				RelativePath="..\..\..\include\ee\GL.h"
 				>
 			</File>
-			<File
-				RelativePath="..\..\..\source\render\GL10.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\include\ee\GL10.h"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="shader"
@@ -459,6 +451,14 @@
 			</File>
 			<File
 				RelativePath="..\..\..\include\ee\render_utility.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\source\render\RenderTarget.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\include\ee\RenderTarget.h"
 				>
 			</File>
 			<File
