[FIXED] use shaderlab
Former-commit-id: f586fa963e21602c84f2a7d8e72542bc57298952

--- a/easyeditor/platform/msvc2008/projects/librender.vcproj
+++ b/easyeditor/platform/msvc2008/projects/librender.vcproj
@@ -469,6 +469,10 @@
 				RelativePath="..\..\..\include\ee\Snapshoot.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\include\ee\texture_format.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\source\render\BlendModes.cpp"
